# vangers-utils-qt

./: .gitignore  CMakeLists.txt  Readme.md  com.lpenguin.vangers-utils.desktop  vangers-utils-qt.qbs
.github/workflows/: packages.yml
lib/: lib.qbs
lib/m3d/: m3d.qbs
lib/m3djson/: m3djsonaccess.cpp  m3djsonext.cpp  m3djsonext.h
lib/mtool/: mtool.qbs
lib/nlohmann_json/: nlohmann_json.qbs
lib/riff/: riff.qbs
lib/splay/: splay.qbs
lib/vlc/: vlc.qbs
lib/volint/: volint.qbs
lib/vox/: vox.qbs
model2vmap/: com.lpenguin.model2vmap.desktop  model2vmap.qbs
src/: binaryio.h  graphicsviewzoom.cpp  graphicsviewzoom.h  heightmapfrommesh.cpp  heightmapfrommesh.h  imagegraphicsview.cpp  imagegraphicsview.h  imageviewer.cpp  imageviewer.h  imageviewer.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  palettegrid.cpp  palettegrid.h  paletteview.cpp  paletteview.h  paletteview.ui  paletteviewer.cpp  paletteviewer.ui  resourceviewer.cpp  resourceviewer.h  span.h
src/core/: optional.h  vector.h  vectorext.h
src/core/ini/: iniaccess.cpp  iniaccess.h  inisettings.h  inistreamreader.h  inistreamwriter.cpp
src/image/: bmpimage.cpp  bmpimage.h  image.cpp  image.h  mssimageaccess.cpp  mssimageaccess.h  palette.cpp  palette.h  pngimage.cpp  pngimage.h  qtimageaccess.cpp  qtimageaccess.h  svsimageaccess.cpp  svsimageaccess.h  xbmimage.cpp  xbmimage.h
src/pal/: fostral.pal  glorx2.pal  harmoy_Threall.pal  necross1.pal
src/plugins/: imageviewer.cpp  imageviewer.h  imageviewer.ui  paletteviewer.cpp  paletteviewer.h  paletteviewer.ui  resourceaccess.h  resourceviewer.cpp  resourceviewer.h
src/riff/: riff.cpp  riff.h  riffbinaryreaderext.cpp  riffbinaryreaderext.h  riffbinarywriterext.cpp  riffbinarywriterext.h  riffencoding.h
src/splay/: splay.cpp  splay.h
src/volint/: volint.cpp  volint.h
src/vox/: vox.h  voxbinaryreaderext.cpp  voxbinaryreaderext.h  voxbinarywriterext.cpp  voxbinarywriterext.h
vangers-utils-core/: palettes.qrc  vangers-utils-core.qbs
vangers-utils-core/pal/: glorx.pal  glorx1.pal  harmoy_Boozeena.pal  harmoy_Khox.pal  l5_escave.pal  l6_escave.pal  necross2.pal
vangers-utils-gui/: com.lpenguin.vangers-utils.desktop  vangers-utils-gui.qbs
vangers-utils-model2vmap/: vangers-utils-model2vmap.qbs
vangers-utils-plugins/: vangers-utils-plugins.qbs
vangers-utils-plugins/vangers-utils-plugin-image/: vangers-utils-plugin-image.qbs
vangers-utils-plugins/vangers-utils-plugin-model/: vangers-utils-plugin-model.qbs
vangers-utils-plugins/vangers-utils-plugin-palette/: vangers-utils-plugin-palette.qbs
vangers-utils-plugins/vangers-utils-plugin-vmap/: vangers-utils-plugin-vmap.qbs
vlc2json/: vlc2json.qbs
(+311 files in other folders)
